# vrs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  log4rs.yml
src/: lib.rs  main.rs  records.rs  utils.rs
src/data/: db.rs  mod.rs  mongo_connection.rs  security.rs
src/route_handlers/: records.rs
src/routes/: auth.rs  health.rs  mod.rs  records.rs  responses.rs  users.rs
tests/: basic_test.rs  failures_test.rs  persistency_test.rs
tests/common/: mod.rs
