[package]
name = "vrs"
version = "0.1.0"
authors = ["maridob <maria.brinas-dobrowski@target.com>", "John Trammell <john.trammell@target.com>"]
edition = "2018"

[dependencies]
rocket = "^0.4"
serde_json = "1.0"
rocket_contrib = { version = "^0.4", default-features = false, features = ["json"] }
log = "0.4"
log4rs = "0.8"